fix formatting issues, display cards on exercise page, modals on mobile

--- a/styles/Element.module.css
+++ b/styles/Element.module.css
@@ -35,6 +35,7 @@
 .star {
   margin-top: 21px;
   margin-left: 4px;
+  padding-inline: 10px;
 }
 
 @media only screen and (max-width: 576px) {
