--- a/styles/Workouts/Workouts.module.css
+++ b/styles/Workouts/Workouts.module.css
@@ -1,7 +1,6 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300ita‌​lic,400italic,500,500italic,700,700italic,900italic,900);
 
 .container {
-  padding: 0 2rem;
   padding: 15vh 0;
   margin: 0 auto;
   align-content: center;
